--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
+    "mongodb": "^2.2.31",
     "mongojs": "^2.4.0",
     "mongoose": "^4.11.0",
     "morgan": "^1.8.2",
